--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="about" class="about">
         <div class="container">
             <h2>About Us</h2>
-            <img controls width="300" src="images/Logo.jpg" alt="CSC Center Work in Progress">
+            <img controls width="300" src="Logo.jpg" alt="CSC Center Work in Progress">
             <p>ACES is a recognized CSC & computer training institute based in Rammandir, Pithoragarh. We offer a wide range of e-governance services and technical computer courses to empower students and the local community.</p>
         </div>
     </section>
@@ -46,8 +46,8 @@
         <div class="container">
             <h2>CSC Services</h2>
             <ul>
-                <img controls width="300" src="images/csc_services.jpg" alt="Person Working in CSC Center">
-                <img controls width="300" src="images/csc_services2.jpg" alt="Person Working in CSC Center">
+                <img controls width="300" src="csc_services.jpg" alt="Person Working in CSC Center">
+                <img controls width="300" src="csc_services2.jpg" alt="Person Working in CSC Center">
                 <li>Banking Services (Money Transfer, Account Opening)</li>
                 <li>Insurance Services (Bike, Car, Life, Health)</li>
                 <li>Document Services (Income, Caste, Residence Certificates)</li>
@@ -63,7 +63,7 @@
         <div class="container">
             <h2>Computer Courses</h2>
             <ul>
-                <img controls width="300" src="images/computer_courses.jpg" alt="CSC Center Work in Progress">
+                <img controls width="300" src="computer_courses.jpg" alt="CSC Center Work in Progress">
                 <li>CCA - Certificate in Computer Application</li>
                 <li>CCD - Certificate in Computer Operation</li>
                 <li>DCO - Diploma in Computer Operation</li>
@@ -79,8 +79,8 @@
         <div class="container">
             <h2>Gallery</h2>
             <div class="gallery-grid">
-                <img controls width="300" src="images/teacher-working-placeholder.jpg" alt="Person Working in CSC Center">
-                <img controls width="300" src="images/csc-center-placeholder.jpg" alt="CSC Center Work in Progress">
+                <img controls width="300" src="teacher-working-placeholder.jpg" alt="Person Working in CSC Center">
+                <img controls width="300" src="csc-center-placeholder.jpg" alt="CSC Center Work in Progress">
                 <video controls width="300">
                     <source src="students-learning-placeholder.mp4" type="video/mp4">
                     Your browser does not support the video tag.
@@ -106,3 +106,4 @@
 </body>
 
 </html>
+
